[project]
name        = "comfyui-selector"
description = "Selector and Recourse. Presets & failsafes. Work flow. EXDYSA"
version     = "3.1.0"
license     = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/exdysa/comfyui-selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "exdysa"
DisplayName = "comfyui-selector"
Icon        = ""
