[project]
name        = "comfyui-selector"
description = "Selector and Recourse. Presets & failsafes. Work flow. EXDYSA"
version     = "4.0.6"
license     = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/exdysa/comfyui-selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "exdysa"
DisplayName = "comfyui-selector"
Icon        = ""

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "__init__",
    "selector",
    "selector_in",
    "selector_out",
    "recourse",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false
